ci needs at least one script commandci needs at least one script command

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,8 @@ workflow:
     - if: '$CI_COMMIT_BRANCH'
 
 pages:
+  script:
+   - echo "ci needs at least one script command"
   artifacts:
     paths:
       - "*.*"
