--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,6 +12,6 @@ pages:
       - "*"
     exclude:
       - ".*"
-      - ".git/*"
+      - ".git/"
   rules:
     - if: '$CI_COMMIT_BRANCH == "deploy"'
