--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -18,7 +18,12 @@ jobs:
           apk add --update git &&
           apk add tiled --repository=http://dl-cdn.alpinelinux.org/alpine/edge/testing/
       - name: Build tiles
-        run: mkdir dist && tiled -platform offscreen --export-map json map.tmx dist/main.json
+        run: >
+          mkdir dist &&
+          tiled -platform offscreen --export-map json map.tmx dist/main.json &&
+          sed -i 's/..\\\/assets\\\///g' dist/main.json &&
+          find . -name \*.png -exec cp {} dist/ \; &&
+          cp COPYRIGHT dist/
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
