--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -21,8 +21,9 @@ jobs:
         run: >
           mkdir dist &&
           tiled -platform offscreen --export-map json map.tmx dist/main.json &&
-          sed -i 's/..\\\/assets\\\///g' dist/main.json &&
-          sed -i 's/assets\\\///g' dist/main.json &&
+          cp *.json dist/ &&
+          sed -i 's/\.\.\\\/assets\\\///g' dist/*.json &&
+          sed -i 's/assets\\\///g' dist/*.json &&
           find . -name \*.png -exec cp {} dist/ \; &&
           find . -name \*.mp3 -exec cp {} dist/ \;
 
